fdo#43467: Infer number format from formula result if appropriate.

In case the data source has a formula cell, the number format may be
inferred from the formula result in case the cell format is General.

Also,

1) no need to use UNO API in the API implementation.  Let use the
   internal API here.

2) this method didn't take into account the hidden cells.

TODO: We need to handle number formats for external ref data properly.